@@ -33,14 +33,14 @@ SHA256 e043510c72044f82f28f57f409db9a31c5c087429a5304c4ad535afeab2f4273 files/te
 DIST texlive-basicbin-2007.tar.bz2 9135714 RMD160 14748132f4901eb3ba8ea09d6aabba1be7af1510 SHA1 44d6d2f731a3990bbdf349359cf858859f5422ec SHA256 a046d1c96682a82453382e8593cf88667215b6518fd38604dad31cd6e2e663af
 DIST texlive-binextra-2007.tar.bz2 548576 RMD160 5be5a7ad38c8fb0fb45666f3b252f82703caf3fe SHA1 9b9e33c5a4d00a6065bb7fab555bba6824c1823f SHA256 71979822da8b4f8ed2e062e0411dc612b08f65f5fec612c310226dbdb20fe6c3
 DIST texlive-core-2007.tar.bz2 31078286 RMD160 496cb3fa3c5cd9b2ea5da3b0bced67a2b5afe7b9 SHA1 37286f7b962c18ec5234071a8d2dde1499d9ab71 SHA256 96c12147ea9717539553eb6b3be52c2df6163ca617dccc71282ccd39c2e5773b
-EBUILD texlive-core-2007.ebuild 6988 RMD160 32186c249e61079a0a6b9e37281aebcb24aa71b9 SHA1 743939872c2761018267a6e6152e461fe431402f SHA256 e330a0b1ec15d94e1ed5c1004dd6cb335d69f7992d4adac369368a6ece2f0756
-MD5 3a46dd6e6285c57cc229af52319fe3b8 texlive-core-2007.ebuild 6988
-RMD160 32186c249e61079a0a6b9e37281aebcb24aa71b9 texlive-core-2007.ebuild 6988
-SHA256 e330a0b1ec15d94e1ed5c1004dd6cb335d69f7992d4adac369368a6ece2f0756 texlive-core-2007.ebuild 6988
-MISC ChangeLog 1808 RMD160 1777eadc184bcae5ed3fa4ef8be3d5e63ea23211 SHA1 c1f069121ba41cb7098af90a3c72f6e8803475ff SHA256 6703825ec81be89d22d1f713bdc53ecbd571c3d6b9bea2d6dcab0a0842a4e851
-MD5 b528dfcde904dbbd9c29324500e970b4 ChangeLog 1808
-RMD160 1777eadc184bcae5ed3fa4ef8be3d5e63ea23211 ChangeLog 1808
-SHA256 6703825ec81be89d22d1f713bdc53ecbd571c3d6b9bea2d6dcab0a0842a4e851 ChangeLog 1808
+EBUILD texlive-core-2007.ebuild 5735 RMD160 3b1de5d793cb992735dd08cc6618b034357688b7 SHA1 d63d2aa7609c3883dccebd8759af7b4c9e0f21cb SHA256 bc010631b82a4a183a68a53efd84bb8cc8b15b55b5eba6e9b42e02f9ee8ae4c9
+MD5 0c4c2886bfb09e50b1c8a46f6404c578 texlive-core-2007.ebuild 5735
+RMD160 3b1de5d793cb992735dd08cc6618b034357688b7 texlive-core-2007.ebuild 5735
+SHA256 bc010631b82a4a183a68a53efd84bb8cc8b15b55b5eba6e9b42e02f9ee8ae4c9 texlive-core-2007.ebuild 5735
+MISC ChangeLog 2006 RMD160 bb7a55702f845636d0dd819f1cf3b7eecdbca194 SHA1 0bc53d060b43ba4598018a14b6ae4fb715613f6a SHA256 b2364132320731b423d5c4d8ab0e5206358be7269ea2e12bd81ff4b3e6d3aa65
+MD5 28621f50b70bb083659a2e22db5e4dfd ChangeLog 2006
+RMD160 bb7a55702f845636d0dd819f1cf3b7eecdbca194 ChangeLog 2006
+SHA256 b2364132320731b423d5c4d8ab0e5206358be7269ea2e12bd81ff4b3e6d3aa65 ChangeLog 2006
 MD5 194aff0f73789f487365c7a9909d7f4f files/digest-texlive-core-2007 801
 RMD160 e5efe58c039f5f166a7c43d766ced6972cfeb270 files/digest-texlive-core-2007 801
 SHA256 f2b74066c3aedc7f0f2df40c5f859c5927bc6dfb5b9848b88d0dab8860820ecf files/digest-texlive-core-2007 801
